--- a/budget_app/budget_app.ipynb
+++ b/budget_app/budget_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "bc93f6c9-5401-43cf-8e24-fcd60c39784d",
    "metadata": {},
    "outputs": [],
@@ -19,22 +19,25 @@
     "            return True\n",
     "        else:\n",
     "            return False\n",
-    "    def deposit(self, amount, description=''):\n",
+    "        \n",
+    "    def deposit(self, amount, description=\"Deposit\"):\n",
     "        self.ledger.append({\"amount\": amount, \"description\": description})\n",
     "        self.amount += amount\n",
     "    \n",
-    "    def withdraw(self, amount, description=''):\n",
+    "    def withdraw(self, amount, description=\"Withdraw\"):\n",
     "        if self.check_funds(amount):\n",
     "            self.ledger.append({\"amount\": -amount, \"description\": description})\n",
     "            self.amount -= amount\n",
     "            self.outflow += amount\n",
     "            return True\n",
     "        else:\n",
+    "            self.ledger.append({\"amount\": 0, \"description\": \"Withdraw fails: No enough fund\"})\n",
     "            return False\n",
     "   \n",
     "    def get_balance(self):\n",
     "        return round(self.amount, 2)\n",
     "         \n",
+    "    # transfer money from self to other\n",
     "    def transfer(self, amount, other):\n",
     "        if self.check_funds(amount):\n",
     "            self.ledger.append({\"amount\": -amount, \"description\": \"Transfer to \" + other.name})\n",
@@ -46,24 +49,29 @@
     "            return False\n",
     "        \n",
     "    def __str__(self):\n",
-    "        form = self.name.center(30, '*')\n",
+    "        description_len = 40\n",
+    "        amount_len = 10\n",
+    "        total_len = description_len + amount_len\n",
+    "        form = self.name.center(total_len, '*')\n",
     "        \n",
     "        for item in self.ledger:\n",
     "            form += '\\n'\n",
-    "            description = item['description'][:23]\n",
-    "            space = 30 - len(description)\n",
-    "            amount = item['amount']\n",
-    "            amount = f'{amount:.2f}'[:7]\n",
-    "            form += f'{description}' + amount.rjust(space)\n",
+    "            description = item['description'][:description_len]\n",
     "            \n",
-    "        form += '\\n' + 'Total: ' + str(self.amount)\n",
+    "            amount = item['amount']\n",
+    "            amount = f'{amount:.2f}'[:amount_len]\n",
+    "            form += f'{description}{amount:>{total_len-len(description)}}' \n",
+    "            \n",
+    "        form += '\\n'\n",
+    "        end_description = \"Total: \"\n",
+    "        form += f'{end_description}{round(self.amount, 2):>{total_len-len(end_description)}}\\n'\n",
     "        \n",
     "        return form"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "c72e6d02-51bd-4626-93e9-9ed912299c7e",
    "metadata": {},
    "outputs": [],
@@ -71,13 +79,15 @@
     "def create_spend_chart(categories):\n",
     "    percentages = []\n",
     "    total_outflow = 0\n",
+    "    \n",
     "    for item in categories:\n",
     "        total_outflow += item.outflow\n",
+    "        \n",
     "    for item in categories:\n",
     "        percent = item.outflow/total_outflow*100\n",
     "        percentages.append(percent)\n",
     "    \n",
-    "    form = 'Percentage spent by category'\n",
+    "    form = \"Percentage spent by category\"\n",
     "    \n",
     "    for i in range(100, -1, -10):\n",
     "        form += '\\n'\n",
@@ -86,52 +96,89 @@
     "    form += '\\n' + ' '*4 + '-' * (len(categories)*3 + 1) \n",
     "    \n",
     "    max_name_len = max([len(item.name) for item in categories])\n",
+    "    # align the name to left and fill it with space util the length of the max_name_len\n",
     "    category_name = [f'{item.name:<{max_name_len}}' for item in categories]\n",
     "    \n",
     "    for i in range(max_name_len):\n",
-    "        form += '\\n' + '     '\n",
+    "        form += '\\n' + ' '*5\n",
     "        for name in category_name:\n",
-    "            form += name[i] + '  '\n",
-    "            \n",
+    "            form += name[i] + ' '*2\n",
+    "    form += '\\n'\n",
+    "    \n",
     "    return form"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "975d60d4-5310-475e-9661-3831f0f1c607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testing():\n",
+    "    food = Category(\"Food\")\n",
+    "    food.deposit(1000, \"initial deposit\")\n",
+    "    food.withdraw(10.15, \"groceries\")\n",
+    "    food.withdraw(15.89, \"restaurant and more food for dessert\")\n",
+    "    food.withdraw(100)\n",
+    "    # print(food.get_balance())\n",
+    "    clothing = Category(\"Clothes\")\n",
+    "    food.transfer(50, clothing)\n",
+    "    clothing.deposit(300)\n",
+    "    clothing.withdraw(25.55)\n",
+    "    clothing.withdraw(200)\n",
+    "    auto = Category(\"Auto\")\n",
+    "    auto.deposit(1000, \"initial deposit\")\n",
+    "    auto.withdraw(15)\n",
+    "\n",
+    "    print(food)\n",
+    "    print(clothing)\n",
+    "    print(auto)\n",
+    "    form = create_spend_chart([food, clothing, auto])\n",
+    "    print(form)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "319efebb-adc2-42ad-9353-8b45c43767bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "973.96\n",
-      "*************Food*************\n",
-      "initial deposit        1000.00\n",
-      "groceries               -10.15\n",
-      "restaurant and more foo -15.89\n",
-      "Transfer to Clothing    -50.00\n",
-      "Total: 923.96\n",
-      "***********Clothing***********\n",
-      "Transfer from Food       50.00\n",
-      "                        -25.55\n",
-      "Total: 24.45\n",
-      "*************Auto*************\n",
-      "initial deposit        1000.00\n",
-      "                        -15.00\n",
-      "Total: 985\n",
+      "***********************Food***********************\n",
+      "initial deposit                            1000.00\n",
+      "groceries                                   -10.15\n",
+      "restaurant and more food for dessert        -15.89\n",
+      "Withdraw                                   -100.00\n",
+      "Transfer to Clothes                         -50.00\n",
+      "Total:                                      823.96\n",
+      "\n",
+      "*********************Clothes**********************\n",
+      "Transfer from Food                           50.00\n",
+      "Deposit                                     300.00\n",
+      "Withdraw                                    -25.55\n",
+      "Withdraw                                   -200.00\n",
+      "Total:                                      124.45\n",
+      "\n",
+      "***********************Auto***********************\n",
+      "initial deposit                            1000.00\n",
+      "Withdraw                                    -15.00\n",
+      "Total:                                         985\n",
+      "\n",
       "Percentage spent by category\n",
       "100|          \n",
       " 90|          \n",
       " 80|          \n",
       " 70|          \n",
-      " 60|          \n",
-      " 50|          \n",
-      " 40| o  o     \n",
+      " 60|    o     \n",
+      " 50|    o     \n",
+      " 40|    o     \n",
       " 30| o  o     \n",
-      " 20| o  o  o  \n",
-      " 10| o  o  o  \n",
+      " 20| o  o     \n",
+      " 10| o  o     \n",
       "  0| o  o  o  \n",
       "    ----------\n",
       "     F  C  A  \n",
@@ -139,37 +186,20 @@
       "     o  o  t  \n",
       "     d  t  o  \n",
       "        h     \n",
-      "        i     \n",
-      "        n     \n",
-      "        g     \n"
+      "        e     \n",
+      "        s     \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "food = Category(\"Food\")\n",
-    "food.deposit(1000, \"initial deposit\")\n",
-    "food.withdraw(10.15, \"groceries\")\n",
-    "food.withdraw(15.89, \"restaurant and more food for dessert\")\n",
-    "print(food.get_balance())\n",
-    "clothing = Category(\"Clothing\")\n",
-    "food.transfer(50, clothing)\n",
-    "clothing.withdraw(25.55)\n",
-    "clothing.withdraw(100)\n",
-    "auto = Category(\"Auto\")\n",
-    "auto.deposit(1000, \"initial deposit\")\n",
-    "auto.withdraw(15)\n",
-    "\n",
-    "print(food)\n",
-    "print(clothing)\n",
-    "print(auto)\n",
-    "form = create_spend_chart([food, clothing, auto])\n",
-    "print(form)"
+    "testing()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de02d276-10de-4338-9ee0-b7c365db1136",
+   "id": "9777c2d1-8423-4fd8-890f-1d8d8adc8187",
    "metadata": {},
    "outputs": [],
    "source": []
